Make sure notificaitons don't scroll out of view

--- a/css/notifcenter.css
+++ b/css/notifcenter.css
@@ -65,7 +65,7 @@ body {
 	list-style: none;
 	margin: 0;
 	padding: 0;
-	position: absolute;
+	position: fixed;
 	top: 0;
 	right: 0;
 	z-index: 1003;
